fix spacing

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -10,6 +10,7 @@ html {
 a:link {
 	text-decoration: none;
 }
+
 h1 {
 	font-size: 30px;
 	font-family: "Mogan";
@@ -36,7 +37,7 @@ p {
 	color: #000;
 	font-weight: 400;
 	font-size: 1rem;
-	line-height: 20px;
+	line-height: 30px;
 }
 li {
 	list-style-type: none;
@@ -186,7 +187,7 @@ a.button:hover {
 /** Sections **/
 
 .section {
-	padding: 40px 0;
+	padding: 50px 0;
 }
 .section-collapse {
 	padding: 0;
@@ -415,7 +416,6 @@ img {
 	padding: 10px;
 }
 .aboutmecontent p {
-	line-height: 20px;
 	padding: 10px;
 	font-size: 18px;
 }
@@ -428,7 +428,6 @@ img {
 	padding: 20px;
 }
 .cssection p {
-	line-height: 20px;
 	padding: 10px;
 }
 h5 {
